--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "pyyaml",
     "flask",
     "waitress",
-    "transformers>=4.40.0",
+    "requests",
+    "transformers>=4.56.2",
     "datasets",
     "accelerate",
     "trl",
