--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,27 @@ training = [
     "cmake",
     "pybind11"
 ]
+
+# Test dependencies
+test = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-xdist>=3.0.0",        # Parallel test execution
+    "pytest-timeout>=2.1.0",       # Test timeouts
+    "responses>=0.23.0",           # Mock HTTP requests
+    "hypothesis>=6.0.0",           # Property-based testing
+]
+
+# Development dependencies
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-xdist>=3.0.0",
+    "black>=23.0.0",
+    "ruff>=0.1.0",
+    "mypy>=1.0.0",
+    "pre-commit>=3.0.0",
+]
