--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ MANIFEST
 update_colors.py
 repomix-output.xml
 nul
+.claude/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
