--- a/examples/llama3/llama3.2_3b_lora.yml
+++ b/examples/llama3/llama3.2_3b_lora.yml
@@ -2,8 +2,8 @@
 # Optimized for consumer GPUs (16-24GB VRAM)
 
 # Model and Dataset
-base_model: "meta-llama/Llama-3.2-3B-Instruct"
-dataset_name: "philschmid/guanaco-sharegpt-style"  # High-quality conversations
+base_model: "unsloth/Llama-3.2-3B-Instruct"
+dataset_name: "mlabonne/FineTome-100k"  # High-quality curated dataset
 output_model_name: "your-username/llama3.2-3b-lora-custom"
 output_dir: "/workspace/outputs/llama3.2-lora/"
 
@@ -19,7 +19,7 @@ loss_masking_strategy: "full"  # Default, can be omitted
 batch_size: 4  # Works on 16GB GPUs
 gradient_accumulation: 4  # Effective batch size: 16
 epochs: 3
-learning_rate: 2e-4
+learning_rate: 0.0002
 lr_scheduler_type: "cosine"
 optim: "adamw_torch_fused"
 save_steps: 100
@@ -27,7 +27,7 @@ save_steps: 100
 # Memory Optimization
 gradient_checkpointing: true
 torch_compile: true
-tf32: true
+tf32: false  # Disabled for AMD GPUs
 cache_dir: "~/.cache/late/models"
 
 # LoRA Configuration for 3B model
@@ -45,8 +45,8 @@ lora:
     - "down_proj"
 
 # Logging
-report_to_wandb: true
-upload_to_hub: true
+report_to_wandb: false  # Disabled for now
+upload_to_hub: false  # Disabled for now
 
 # Optional: Notifications via ntfy.sh (leave empty to disable)
 ntfy_topic: ""  # e.g., "my-training-runs"
