--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "late"
-version = "0.1.0"
+name = "late-training"
+version = "0.1.1"
 authors = [
   { name="Your Name", email="your.email@example.com" },
 ]
