Add Unsloth integration for 2-5x faster training on AMD and NVIDIA GPUs
Core Integration:
- Add optional Unsloth support via use_unsloth flag in config
- Import unsloth before trl/transformers/peft to prevent eos_token conflicts
- Use FastLanguageModel for optimized model loading with 4bit quantization
- Integrate Unsloth's get_peft_model for efficient LoRA configuration
- Set lora_dropout=0 and use_gradient_checkpointing='unsloth' for best performance

Configuration Updates:
- Add use_unsloth flag to example configs
- Document AMD-specific installation in README, setup.py, and pyproject.toml
- Installation: pip install --no-deps unsloth unsloth-zoo && pip install 'unsloth[amd] @ git+https://github.com/unslothai/unsloth'

New Examples (examples/unsloth/):
- llama3.2_3b_unsloth.yml: For 16-24GB VRAM GPUs
- llama3_8b_unsloth.yml: For 40-80GB VRAM GPUs
- qwen2.5_7b_unsloth.yml: Multilingual model for 32-80GB VRAM
- README.md: Comprehensive guide with installation, usage, troubleshooting

Key Features:
- 2-5x training speedup with optimized kernels
- Lower memory usage allows larger batch sizes
- AMD ROCm and NVIDIA CUDA support
- Zero config - just add use_unsloth: true
- Automatic bitsandbytes workarounds for AMD GPUs

Technical Details:
- Fix import order issue that caused '<EOS_TOKEN>' placeholder error
- Unsloth must be imported before TRL to prevent tokenizer conflicts
- Use standard dataset formatting with apply_chat_template
- Support both 'messages' and 'conversations' dataset formats
- Disable torch_compile when using Unsloth (has own optimizations)

Tested on AMD MI300X with successful training completion.

--- a/examples/llama3/llama3.2_3b_lora.yml
+++ b/examples/llama3/llama3.2_3b_lora.yml
@@ -11,6 +11,9 @@ output_dir: "/workspace/outputs/llama3.2-lora/"
 training_type: "lora"
 max_seq_length: 2048  # Reasonable for 3B model
 
+# Unsloth Integration (optional) - Provides significant speedup on both AMD and NVIDIA GPUs
+use_unsloth: true
+
 # Loss Masking Strategy (optional, defaults to "full")
 # Options: "full" (compute loss on full conversation) or "assistant_only" (mask user prompts)
 loss_masking_strategy: "full"  # Default, can be omitted
