--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,11 @@ training = [
     "pybind11"
 ]
 
+# Note: Unsloth for AMD GPUs must be installed separately using:
+# pip install --no-deps unsloth unsloth-zoo
+# pip install --no-deps git+https://github.com/unslothai/unsloth-zoo.git
+# pip install "unsloth[amd] @ git+https://github.com/unslothai/unsloth"
+
 # Test dependencies
 test = [
     "pytest>=7.0.0",
